zenith/zenith.c
/* A recursive-descent parser generated by greg 0.4.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
struct _GREG;
#define YYRULECOUNT 15

//#define YY_DEBUG

#define YYSTYPE void*

void zen_onMessage(void *name);

#ifndef YY_ALLOC
#define YY_ALLOC(N, D) malloc(N)
#endif
#ifndef YY_CALLOC
#define YY_CALLOC(N, S, D) calloc(N, S)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(B, N, D) realloc(B, N)
#endif
#ifndef YY_FREE
#define YY_FREE free
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)     static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)    static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)      static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)     T
#endif
#ifndef YY_NAME
#define YY_NAME(N) yy##N
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)                 \
  {                                                     \
    int yyc= getchar();                                 \
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);        \
    yyprintf((stderr, "<%c>", yyc));                  \
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN        ( G->begin= G->pos, 1)
#endif
#ifndef YY_END
#define YY_END          ( G->end= G->pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args) fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE int
#endif
#ifndef YY_XTYPE
#define YY_XTYPE void *
#endif
#ifndef YY_XVAR
#define YY_XVAR yyxvar
#endif

#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_PART
#define yydata G->data
#define yy G->ss

struct _yythunk; // forward declaration
typedef void (*yyaction)(struct _GREG *G, char *yytext, int yyleng, struct _yythunk *thunkpos, YY_XTYPE YY_XVAR);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

typedef struct _GREG {
  char *buf;
  int buflen;
  int   offset;
  int   pos;
  int   limit;
  char *text;
  int   textlen;
  int   begin;
  int   end;
  yythunk *thunks;
  int   thunkslen;
  int thunkpos;
  YYSTYPE ss;
  YYSTYPE *val;
  YYSTYPE *vals;
  int valslen;
  YY_XTYPE data;
} GREG;

YY_LOCAL(int) yyrefill(GREG *G)
{
  int yyn;
  YY_XTYPE YY_XVAR = (YY_XTYPE) G->data;
  while (G->buflen - G->pos < 512)
    {
      G->buflen *= 2;
      G->buf= YY_REALLOC(G->buf, G->buflen, G->data);
    }
  YY_INPUT((G->buf + G->pos), yyn, (G->buflen - G->pos));
  if (!yyn) return 0;
  G->limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(GREG *G)
{
  if (G->pos >= G->limit && !yyrefill(G)) return 0;
  ++G->pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(GREG *G, int c)
{
  if (G->pos >= G->limit && !yyrefill(G)) return 0;
  if ((unsigned char)G->buf[G->pos] == c)
    {
      ++G->pos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, G->buf+G->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, G->buf+G->pos));
  return 0;
}

YY_LOCAL(int) yymatchString(GREG *G, char *s)
{
  int yysav= G->pos;
  while (*s)
    {
      if (G->pos >= G->limit && !yyrefill(G)) return 0;
      if (G->buf[G->pos] != *s)
        {
          G->pos= yysav;
          return 0;
        }
      ++s;
      ++G->pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(GREG *G, unsigned char *bits)
{
  int c;
  if (G->pos >= G->limit && !yyrefill(G)) return 0;
  c= (unsigned char)G->buf[G->pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++G->pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", G->buf+G->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", G->buf+G->pos));
  return 0;
}

YY_LOCAL(void) yyDo(GREG *G, yyaction action, int begin, int end)
{
  while (G->thunkpos >= G->thunkslen)
    {
      G->thunkslen *= 2;
      G->thunks= YY_REALLOC(G->thunks, sizeof(yythunk) * G->thunkslen, G->data);
    }
  G->thunks[G->thunkpos].begin=  begin;
  G->thunks[G->thunkpos].end=    end;
  G->thunks[G->thunkpos].action= action;
  ++G->thunkpos;
}

YY_LOCAL(int) yyText(GREG *G, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (G->textlen < (yyleng - 1))
        {
          G->textlen *= 2;
          G->text= YY_REALLOC(G->text, G->textlen, G->data);
        }
      memcpy(G->text, G->buf + begin, yyleng);
    }
  G->text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(GREG *G)
{
  int pos;
  for (pos= 0; pos < G->thunkpos; ++pos)
    {
      yythunk *thunk= &G->thunks[pos];
      int yyleng= thunk->end ? yyText(G, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, G->text));
      thunk->action(G, G->text, yyleng, thunk, G->data);
    }
  G->thunkpos= 0;
}

YY_LOCAL(void) yyCommit(GREG *G)
{
  if ((G->limit -= G->pos))
    {
      memmove(G->buf, G->buf + G->pos, G->limit);
    }
  G->offset += G->pos;
  G->begin -= G->pos;
  G->end -= G->pos;
  G->pos= G->thunkpos= 0;
}

YY_LOCAL(int) yyAccept(GREG *G, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(G);
      yyCommit(G);
    }
  return 1;
}

YY_LOCAL(void) yyPush(GREG *G, char *text, int count, yythunk *thunk, YY_XTYPE YY_XVAR) { G->val += count; }
YY_LOCAL(void) yyPop(GREG *G, char *text, int count, yythunk *thunk, YY_XTYPE YY_XVAR)  { G->val -= count; }
YY_LOCAL(void) yySet(GREG *G, char *text, int count, yythunk *thunk, YY_XTYPE YY_XVAR)  { G->val[count]= G->ss; }

#endif /* YY_PART */

#define YYACCEPT        yyAccept(G, yythunkpos0)

YY_RULE(int) yy_Comment(GREG *G); /* 15 */
YY_RULE(int) yy__(GREG *G); /* 14 */
YY_RULE(int) yy_OperatorChar(GREG *G); /* 13 */
YY_RULE(int) yy_Number(GREG *G); /* 12 */
YY_RULE(int) yy_Identifier(GREG *G); /* 11 */
YY_RULE(int) yy_CLOS_PAREN(GREG *G); /* 10 */
YY_RULE(int) yy_COMMA(GREG *G); /* 9 */
YY_RULE(int) yy_OPEN_PAREN(GREG *G); /* 8 */
YY_RULE(int) yy_Arguments(GREG *G); /* 7 */
YY_RULE(int) yy_Symbol(GREG *G); /* 6 */
YY_RULE(int) yy_EOL(GREG *G); /* 5 */
YY_RULE(int) yy_Terminator(GREG *G); /* 4 */
YY_RULE(int) yy_Message(GREG *G); /* 3 */
YY_RULE(int) yy_WS(GREG *G); /* 2 */
YY_RULE(int) yy_Exp(GREG *G); /* 1 */

YY_ACTION(void) yy_1_Number(GREG *G, char *yytext, int yyleng, yythunk *thunk, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_Number\n"));
   yy=yytext; ;
}
YY_ACTION(void) yy_1_Identifier(GREG *G, char *yytext, int yyleng, yythunk *thunk, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_Identifier\n"));
   yy=yytext; ;
}
YY_ACTION(void) yy_1_Symbol(GREG *G, char *yytext, int yyleng, yythunk *thunk, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_Symbol\n"));
   yy=yytext; ;
}
YY_ACTION(void) yy_1_Message(GREG *G, char *yytext, int yyleng, yythunk *thunk, YY_XTYPE YY_XVAR)
{
#define name G->val[-1]
  yyprintf((stderr, "do yy_1_Message\n"));
   zen_onMessage(name); ;
#undef name
}
YY_ACTION(void) yy_1_Exp(GREG *G, char *yytext, int yyleng, yythunk *thunk, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_Exp\n"));
   printf("Ack, an error!\n"); ;
}

YY_RULE(int) yy_Comment(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "Comment"));
  {  int yypos2= G->pos, yythunkpos2= G->thunkpos;  if (!yymatchChar(G, ';')) goto l3;  goto l2;
  l3:;	  G->pos= yypos2; G->thunkpos= yythunkpos2;  if (!yymatchString(G, "#!")) goto l1;
  }
  l2:;	
  l4:;	
  {  int yypos5= G->pos, yythunkpos5= G->thunkpos;  if (!yymatchDot(G)) goto l5;  goto l4;
  l5:;	  G->pos= yypos5; G->thunkpos= yythunkpos5;
  }  if (!yy_EOL(G)) { goto l1; }
  yyprintf((stderr, "  ok   %s @ %s\n", "Comment", G->buf+G->pos));
  return 1;
  l1:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Comment", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy__(GREG *G)
{
  yyprintf((stderr, "%s\n", "_"));
  l7:;	
  {  int yypos8= G->pos, yythunkpos8= G->thunkpos;  if (!yymatchClass(G, (unsigned char *)"\000\002\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l8;  goto l7;
  l8:;	  G->pos= yypos8; G->thunkpos= yythunkpos8;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "_", G->buf+G->pos));
  return 1;
}
YY_RULE(int) yy_OperatorChar(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "OperatorChar"));
  {  int yypos10= G->pos, yythunkpos10= G->thunkpos;  if (!yymatchChar(G, '=')) goto l11;  goto l10;
  l11:;	  G->pos= yypos10; G->thunkpos= yythunkpos10;  if (!yymatchChar(G, '-')) goto l12;  goto l10;
  l12:;	  G->pos= yypos10; G->thunkpos= yythunkpos10;  if (!yymatchChar(G, '+')) goto l13;  goto l10;
  l13:;	  G->pos= yypos10; G->thunkpos= yythunkpos10;  if (!yymatchChar(G, '*')) goto l14;  goto l10;
  l14:;	  G->pos= yypos10; G->thunkpos= yythunkpos10;  if (!yymatchChar(G, '/')) goto l15;  goto l10;
  l15:;	  G->pos= yypos10; G->thunkpos= yythunkpos10;  if (!yymatchChar(G, '^')) goto l16;  goto l10;
  l16:;	  G->pos= yypos10; G->thunkpos= yythunkpos10;  if (!yymatchChar(G, '&')) goto l17;  goto l10;
  l17:;	  G->pos= yypos10; G->thunkpos= yythunkpos10;  if (!yymatchChar(G, '|')) goto l9;
  }
  l10:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "OperatorChar", G->buf+G->pos));
  return 1;
  l9:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "OperatorChar", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_Number(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "Number"));
  {  int yypos19= G->pos, yythunkpos19= G->thunkpos;  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\000\050\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l19;  goto l20;
  l19:;	  G->pos= yypos19; G->thunkpos= yythunkpos19;
  }
  l20:;	  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l18;
  l21:;	
  {  int yypos22= G->pos, yythunkpos22= G->thunkpos;  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l22;  goto l21;
  l22:;	  G->pos= yypos22; G->thunkpos= yythunkpos22;
  }  yyDo(G, yy_1_Number, G->begin, G->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "Number", G->buf+G->pos));
  return 1;
  l18:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Number", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_Identifier(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "Identifier"));
  {  int yypos24= G->pos, yythunkpos24= G->thunkpos;  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\000\000\000\000\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l25;
  l26:;	
  {  int yypos27= G->pos, yythunkpos27= G->thunkpos;  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\000\000\000\000\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l27;  goto l26;
  l27:;	  G->pos= yypos27; G->thunkpos= yythunkpos27;
  }  goto l24;
  l25:;	  G->pos= yypos24; G->thunkpos= yythunkpos24;  if (!yy_OperatorChar(G)) { goto l23; }
  l28:;	
  {  int yypos29= G->pos, yythunkpos29= G->thunkpos;  if (!yy_OperatorChar(G)) { goto l29; }  goto l28;
  l29:;	  G->pos= yypos29; G->thunkpos= yythunkpos29;
  }
  }
  l24:;	  yyDo(G, yy_1_Identifier, G->begin, G->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "Identifier", G->buf+G->pos));
  return 1;
  l23:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Identifier", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_CLOS_PAREN(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "CLOS_PAREN"));  if (!yymatchChar(G, ')')) goto l30;  if (!yy__(G)) { goto l30; }
  yyprintf((stderr, "  ok   %s @ %s\n", "CLOS_PAREN", G->buf+G->pos));
  return 1;
  l30:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "CLOS_PAREN", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_COMMA(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "COMMA"));  if (!yymatchChar(G, ',')) goto l31;  if (!yy__(G)) { goto l31; }
  yyprintf((stderr, "  ok   %s @ %s\n", "COMMA", G->buf+G->pos));
  return 1;
  l31:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "COMMA", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_OPEN_PAREN(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "OPEN_PAREN"));  if (!yymatchChar(G, '(')) goto l32;  if (!yy__(G)) { goto l32; }
  yyprintf((stderr, "  ok   %s @ %s\n", "OPEN_PAREN", G->buf+G->pos));
  return 1;
  l32:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "OPEN_PAREN", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_Arguments(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "Arguments"));  if (!yy_OPEN_PAREN(G)) { goto l33; }
  {  int yypos34= G->pos, yythunkpos34= G->thunkpos;  if (!yy_Exp(G)) { goto l34; }
  l36:;	
  {  int yypos37= G->pos, yythunkpos37= G->thunkpos;  if (!yy_COMMA(G)) { goto l37; }  if (!yy_Exp(G)) { goto l37; }  goto l36;
  l37:;	  G->pos= yypos37; G->thunkpos= yythunkpos37;
  }  goto l35;
  l34:;	  G->pos= yypos34; G->thunkpos= yythunkpos34;
  }
  l35:;	  if (!yy_CLOS_PAREN(G)) { goto l33; }
  yyprintf((stderr, "  ok   %s @ %s\n", "Arguments", G->buf+G->pos));
  return 1;
  l33:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Arguments", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_Symbol(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "Symbol"));
  {  int yypos39= G->pos, yythunkpos39= G->thunkpos;  if (!yy_Identifier(G)) { goto l40; }  goto l39;
  l40:;	  G->pos= yypos39; G->thunkpos= yythunkpos39;  if (!yy_Number(G)) { goto l38; }
  }
  l39:;	  yyDo(G, yy_1_Symbol, G->begin, G->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "Symbol", G->buf+G->pos));
  return 1;
  l38:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Symbol", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_EOL(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "EOL"));
  {  int yypos42= G->pos, yythunkpos42= G->thunkpos;  if (!yymatchChar(G, '\n')) goto l43;  goto l42;
  l43:;	  G->pos= yypos42; G->thunkpos= yythunkpos42;  if (!yymatchString(G, "\r\n")) goto l44;  goto l42;
  l44:;	  G->pos= yypos42; G->thunkpos= yythunkpos42;  if (!yymatchChar(G, '\r')) goto l41;
  }
  l42:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "EOL", G->buf+G->pos));
  return 1;
  l41:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EOL", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_Terminator(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "Terminator"));
  {  int yypos46= G->pos, yythunkpos46= G->thunkpos;  if (!yy_EOL(G)) { goto l47; }  goto l46;
  l47:;	  G->pos= yypos46; G->thunkpos= yythunkpos46;  if (!yymatchChar(G, '.')) goto l45;
  }
  l46:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Terminator", G->buf+G->pos));
  return 1;
  l45:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Terminator", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_Message(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;  yyDo(G, yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Message"));  if (!yy_Symbol(G)) { goto l48; }  yyDo(G, yySet, -1, 0);  if (!yy_WS(G)) { goto l48; }
  {  int yypos49= G->pos, yythunkpos49= G->thunkpos;  if (!yy_Arguments(G)) { goto l49; }  goto l50;
  l49:;	  G->pos= yypos49; G->thunkpos= yythunkpos49;
  }
  l50:;	  yyDo(G, yy_1_Message, G->begin, G->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "Message", G->buf+G->pos));  yyDo(G, yyPop, 1, 0);
  return 1;
  l48:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Message", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_WS(GREG *G)
{
  yyprintf((stderr, "%s\n", "WS"));
  l52:;	
  {  int yypos53= G->pos, yythunkpos53= G->thunkpos;
  {  int yypos54= G->pos, yythunkpos54= G->thunkpos;  if (!yymatchClass(G, (unsigned char *)"\000\002\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l55;  goto l54;
  l55:;	  G->pos= yypos54; G->thunkpos= yythunkpos54;  if (!yy_Comment(G)) { goto l56; }  goto l54;
  l56:;	  G->pos= yypos54; G->thunkpos= yythunkpos54;  if (!yy_EOL(G)) { goto l53; }
  }
  l54:;	  goto l52;
  l53:;	  G->pos= yypos53; G->thunkpos= yythunkpos53;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "WS", G->buf+G->pos));
  return 1;
}
YY_RULE(int) yy_Exp(GREG *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "Exp"));
  {  int yypos58= G->pos, yythunkpos58= G->thunkpos;  if (!yy_WS(G)) { goto l59; }  if (!yy_Message(G)) { goto l59; }  goto l58;
  l59:;	  G->pos= yypos58; G->thunkpos= yythunkpos58;  if (!yy_WS(G)) { goto l60; }  if (!yy_Terminator(G)) { goto l60; }  goto l58;
  l60:;	  G->pos= yypos58; G->thunkpos= yythunkpos58;  if (!yy_WS(G)) { goto l57; }
  l61:;	
  {  int yypos62= G->pos, yythunkpos62= G->thunkpos;
  {  int yypos63= G->pos, yythunkpos63= G->thunkpos;  if (!yy_EOL(G)) { goto l63; }  goto l62;
  l63:;	  G->pos= yypos63; G->thunkpos= yythunkpos63;
  }  if (!yymatchDot(G)) goto l62;  goto l61;
  l62:;	  G->pos= yypos62; G->thunkpos= yythunkpos62;
  }  if (!yy_EOL(G)) { goto l57; }  yyDo(G, yy_1_Exp, G->begin, G->end);
  }
  l58:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Exp", G->buf+G->pos));
  return 1;
  l57:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Exp", G->buf+G->pos));
  return 0;
}

#ifndef YY_PART

typedef int (*yyrule)(GREG *G);

YY_PARSE(int) YY_NAME(parse_from)(GREG *G, yyrule yystart)
{
  int yyok;
  if (!G->buflen)
    {
      G->buflen= 1024;
      G->buf= YY_ALLOC(G->buflen, G->data);
      G->textlen= 1024;
      G->text= YY_ALLOC(G->textlen, G->data);
      G->thunkslen= YY_STACK_SIZE;
      G->thunks= YY_ALLOC(sizeof(yythunk) * G->thunkslen, G->data);
      G->valslen= YY_STACK_SIZE;
      G->vals= YY_ALLOC(sizeof(YYSTYPE) * G->valslen, G->data);
      G->begin= G->end= G->pos= G->limit= G->thunkpos= 0;
    }
  G->pos = 0;
  G->begin= G->end= G->pos;
  G->thunkpos= 0;
  G->val= G->vals;
  yyok= yystart(G);
  if (yyok) yyDone(G);
  yyCommit(G);
  return yyok;
  (void)yyrefill;
  (void)yymatchDot;
  (void)yymatchChar;
  (void)yymatchString;
  (void)yymatchClass;
  (void)yyDo;
  (void)yyText;
  (void)yyDone;
  (void)yyCommit;
  (void)yyAccept;
  (void)yyPush;
  (void)yyPop;
  (void)yySet;
}

YY_PARSE(int) YY_NAME(parse)(GREG *G)
{
  return YY_NAME(parse_from)(G, yy_Exp);
}

YY_PARSE(GREG *) YY_NAME(parse_new)(YY_XTYPE data)
{
  GREG *G = (GREG *)YY_CALLOC(1, sizeof(GREG), G->data);
  G->data = data;
  return G;
}

YY_PARSE(void) YY_NAME(parse_free)(GREG *G)
{
  YY_FREE(G);
}

#endif


void zen_parse()
{
  GREG* G = YY_ALLOC(sizeof(GREG), 0);
  while (yyparse(G));
}

